# URDF

./: README.md
R1/: CMakeLists.txt  package.xml
R1/config/: R1.yaml  joint_names_r1_v2_1_0.yaml
R1/launch/: display.launch  gazebo.launch
R1/meshes/: left_arm_base_link.STL  left_arm_link1.STL  left_arm_link2.STL  left_arm_link3.STL  left_arm_link4.STL  left_arm_link5.STL  left_arm_link6.STL  left_gripper_finger_link2.STL  left_gripper_link.STL  left_gripper_link1.STL  left_gripper_link2.STL  left_realsense_link.STL  right_arm_base_link.STL  right_arm_link1.STL  right_arm_link2.STL  right_arm_link3.STL  right_arm_link4.STL  right_arm_link5.STL  right_arm_link6.STL  right_gripper_finger_link2.STL  right_gripper_link1.STL  right_gripper_link2.STL  right_realsense_link.STL  servo_link1.STL  servo_link2.STL  servo_link3.STL  steer_motor_link1.STL  steer_motor_link2.STL  steer_motor_link3.STL  torso_link1.STL  torso_link2.STL  torso_link3.STL  torso_link4.STL  torso_link4_.STL  wheel_link1.STL  wheel_link2.STL  wheel_link3.STL  wheel_motor_link1.STL  wheel_motor_link2.STL  wheel_motor_link3.STL  (+1 more)
R1/urdf/: R1.csv  R1.urdf  r1_v2_1_0.csv  r1_v2_1_0.urdf
